# avdev

./: .gitignore  README.md  pom.xml
avdev-jni/src/main/cpp/: CMakeLists.txt
avdev-jni/src/main/cpp/dependencies/core/: CMakeLists.txt
avdev-jni/src/main/cpp/dependencies/core/include/: AVdevException.h  AudioCaptureDevice.h  AudioDevice.h  AudioFormat.h  AudioInputStream.h  AudioManager.h  AudioOutputStream.h  AudioPlaybackDevice.h  AudioSessionListener.h  AudioSink.h  AudioSource.h  AudioStream.h  CameraControl.h  Device.h  DeviceList.h  DeviceManager.h  HotplugListener.h  ImageUtils.h  Log.h  LogLocation.h  LogOutputStream.h  LogStream.h  MessageQueue.h  PictureControl.h  PictureFormat.h  PixelFormatConverter.h  Queue.h  RingBuffer.h  Stream.h  StreamListener.h  Thread.h  Transform.h  VideoCaptureDevice.h  VideoControl.h  VideoDevice.h  VideoManager.h  VideoOutputStream.h  VideoSink.h  VideoStream.h  avdev.h
avdev-jni/src/main/cpp/dependencies/core/include/windows/: WinHotplugNotifier.h  WindowsHelper.h
avdev-jni/src/main/cpp/dependencies/core/src/: AVdevException.cpp  AudioCaptureDevice.cpp  AudioDevice.cpp  AudioFormat.cpp  AudioInputStream.cpp  AudioManager.cpp  AudioOutputStream.cpp  AudioPlaybackDevice.cpp  AudioStream.cpp  CameraControl.cpp  ComInitializer.cpp  Device.cpp  DeviceManager.cpp  MessageQueue.cpp  PictureControl.cpp  PictureFormat.cpp  PixelFormatConverter.cpp  Stream.cpp  Thread.cpp  VideoCaptureDevice.cpp  VideoDevice.cpp  VideoManager.cpp  VideoOutputStream.cpp  VideoStream.cpp
avdev-jni/src/main/cpp/dependencies/core/src/windows/: WinHotplugNotifier.cpp
avdev-jni/src/main/cpp/dependencies/linux/alsa/: CMakeLists.txt
avdev-jni/src/main/cpp/dependencies/linux/alsa/include/: AlsaAudioCaptureDevice.h  AlsaAudioInputStream.h  AlsaAudioManager.h  AlsaAudioOutputStream.h  AlsaAudioPlaybackDevice.h  AlsaAudioStream.h
avdev-jni/src/main/cpp/dependencies/linux/alsa/src/: AlsaAudioCaptureDevice.cpp  AlsaAudioInputStream.cpp  AlsaAudioManager.cpp  AlsaAudioOutputStream.cpp  AlsaAudioPlaybackDevice.cpp  AlsaAudioStream.cpp
avdev-jni/src/main/cpp/dependencies/linux/pulse/: CMakeLists.txt
avdev-jni/src/main/cpp/dependencies/linux/pulse/include/: PulseAudioCaptureDevice.h  PulseAudioDevice.h  PulseAudioInputStream.h  PulseAudioManager.h  PulseAudioOutputStream.h  PulseAudioPlaybackDevice.h  PulseAudioStream.h
avdev-jni/src/main/cpp/dependencies/linux/pulse/src/: PulseAudioCaptureDevice.cpp  PulseAudioDevice.cpp  PulseAudioInputStream.cpp  PulseAudioManager.cpp  PulseAudioOutputStream.cpp  PulseAudioPlaybackDevice.cpp  PulseAudioStream.cpp
avdev-jni/src/main/cpp/dependencies/linux/v4l2/: CMakeLists.txt
avdev-jni/src/main/cpp/dependencies/linux/v4l2/include/: JpegDecoder.h  V4l2TypeConverter.h  V4l2Utils.h  V4l2VideoCaptureDevice.h  V4l2VideoManager.h  V4l2VideoOutputStream.h  avdev-v4l2.h
avdev-jni/src/main/cpp/dependencies/linux/v4l2/src/: JpegDecoder.cpp  V4l2TypeConverter.cpp  V4l2Utils.cpp  V4l2VideoCaptureDevice.cpp  V4l2VideoManager.cpp  V4l2VideoOutputStream.cpp
avdev-jni/src/main/cpp/dependencies/macos/avfoundation/: CMakeLists.txt
avdev-jni/src/main/cpp/dependencies/macos/avfoundation/include/: AVFTypeConverter.h  AVFVideoCaptureDevice.h  AVFVideoFrameCallback.h  AVFVideoManager.h  AVFVideoOutputStream.h  AVFVideoStreamDelegate.h
avdev-jni/src/main/cpp/dependencies/macos/avfoundation/src/: AVFTypeConverter.mm  AVFVideoCaptureDevice.mm  AVFVideoManager.mm  AVFVideoOutputStream.mm  AVFVideoStreamDelegate.mm
avdev-jni/src/main/cpp/dependencies/macos/coreaudio/: CMakeLists.txt
avdev-jni/src/main/cpp/dependencies/macos/coreaudio/include/: CoreAudioCaptureDevice.h  CoreAudioInputStream.h  CoreAudioManager.h  CoreAudioOutputStream.h  CoreAudioPlaybackDevice.h  CoreAudioStream.h  CoreAudioTypeConverter.h  MacOSHelper.h
avdev-jni/src/main/cpp/dependencies/macos/coreaudio/src/: CoreAudioCaptureDevice.cpp  CoreAudioInputStream.cpp  CoreAudioManager.cpp  CoreAudioOutputStream.cpp  CoreAudioPlaybackDevice.cpp  CoreAudioStream.cpp  CoreAudioTypeConverter.cpp
avdev-jni/src/main/cpp/dependencies/windows/mf/: CMakeLists.txt
avdev-jni/src/main/cpp/dependencies/windows/mf/include/: MFAudioCaptureDevice.h  MFAudioInputStream.h  MFAudioManager.h  MFAudioOutputStream.h  MFAudioPlaybackDevice.h  MFInitializer.h  MFOutputStream.h  MFPcmMediaSource.h  MFStream.h  MFTypeConverter.h  MFUtils.h  MFVideoCaptureDevice.h  MFVideoManager.h  MFVideoOutputStream.h
avdev-jni/src/main/cpp/dependencies/windows/mf/src/: MFAudioCaptureDevice.cpp  MFAudioInputStream.cpp  MFAudioManager.cpp  MFAudioOutputStream.cpp  MFAudioPlaybackDevice.cpp  MFInitializer.cpp  MFOutputStream.cpp  MFPcmMediaSource.cpp  MFStream.cpp  MFTypeConverter.cpp  MFUtils.cpp  MFVideoCaptureDevice.cpp  MFVideoManager.cpp  MFVideoOutputStream.cpp
avdev-jni/src/main/cpp/dependencies/windows/wasapi/: CMakeLists.txt
avdev-jni/src/main/cpp/include/: JNI_AVdev.h  JNI_AVdevContext.h  JNI_AudioCaptureDevice.h  JNI_AudioDeviceManager.h  JNI_AudioPlaybackDevice.h  JNI_AudioSessionListener.h  JNI_AudioSink.h  JNI_AudioSource.h  JNI_AudioStream.h  JNI_DeviceManager.h  JNI_HotplugListener.h  JNI_LogStream.h  JNI_Stream.h  JNI_StreamListener.h  JNI_VideoCaptureDevice.h  JNI_VideoDeviceManager.h  JNI_VideoSink.h  JNI_VideoStream.h
avdev-jni/src/main/cpp/include/api/: AudioCaptureDevice.h  AudioFormat.h  AudioPlaybackDevice.h  CameraControl.h  PictureControl.h  PictureFormat.h  VideoCaptureDevice.h
avdev-jni/src/main/cpp/src/: JNI_AVdev.cpp  JNI_AVdevContext.cpp  JNI_AudioCaptureDevice.cpp  JNI_AudioDeviceManager.cpp  JNI_AudioPlaybackDevice.cpp  JNI_AudioSessionListener.cpp  JNI_AudioSink.cpp  JNI_AudioSource.cpp  JNI_AudioStream.cpp  JNI_DeviceManager.cpp  JNI_HotplugListener.cpp  JNI_LogStream.cpp  JNI_Stream.cpp  JNI_StreamListener.cpp  JNI_VideoCaptureDevice.cpp  JNI_VideoDeviceManager.cpp  JNI_VideoSink.cpp
avdev-jni/src/main/cpp/src/api/: AudioCaptureDevice.cpp  AudioFormat.cpp  AudioPlaybackDevice.cpp  CameraControl.cpp  PictureControl.cpp  PictureFormat.cpp  VideoCaptureDevice.cpp
(+52 files in other folders)
